@@ -4,6 +4,7 @@
 
     Multisite:
     * 0393 FIX: LDAP: Enabled paged LDAP search by default now with a page size of 1000...
+    * 0394 FIX: LDAP: Auth expiration plugin now checks users for being disabled (in AD)...
 
     WATO:
     * 0392 FIX: LDAP: Improved error messages of LDAP configuration test...
